force-app/main/default/objects/Aluno__c/Aluno__c.object-meta.xml
<CustomObject>
    <label>Aluno</label>
    <nameField>
        <label>Aluno Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alunos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>