force-app/main/default/objects/Aluno__c/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <label>CPF</label>
    <length>14</length>
    <type>Text</type>
</CustomField>