force-app/main/default/objects/Aluno__c/fields/Data_de_Nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Nascimento__c</fullName>
    <label>Data de Nascimento</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>